[package]
name = "podpingd"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
config = { version = "0.14.0", features = ["toml"] }
jsonrpsee = { version = "0.24.4", features = ["jsonrpsee-core", "jsonrpsee-http-client", "jsonrpsee-proc-macros", "tokio", "tracing"] }
podping-schemas = { git = "https://github.com/Podcastindex-org/podping-schemas-rust.git", tag = "v1.0.0" }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
serde_json = "1.0.128"
chrono = { version = "0.4.38", features = ["serde"] }
serde_with = { version = "3.9.0", features = ["chrono", "json"] }
regex = "1.10.6"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["compression-full", "decompression-full"] }
jsonrpsee-http-client = "0.24.4"
humantime-serde = "1.1.1"
walkdir = "2.5.0"
reqwest = { version = "0.12.9", features = ["rustls-tls", "json", "gzip", "brotli", "zstd", "deflate"] }
rusty-s3 = "0.5.0"
url = "2.5.3"
thiserror = "2.0.3"
